<resources>
    <string name="app_name">IntellegenceGames</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="col1">TAHMİNLER</string>
    <string name="col2">İPUCU</string>
    <string name="guess1">123</string>
    <string name="game_setting"> Sayıyı bulmak için tahmin ekleyiniz.
        Taminlerin yanındaki ipuçlarındaki her ""+"" işareti, doğru yerde bulunan bir rakama,
        her ""-"" işareti ise yanlış yerde bulunan bir rakama karşılık gelmektedir. Oyun zorluğuna göre basamak sayısı değişmektedir.</string>
    <string name="hint1">--</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_play_sudoku">PlaySudokuActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="win_message">KAZANDINIZ</string>
    <string name="wrong_message">YANLIŞ TAHMİN</string>
    <string name="lose_message">KAYBETTİNİZ</string>
    <string name="invalid_input_message">GEÇERSİZ SAYI</string>

    <string name="top_label">Eşleştirme Oyunu</string>
    <string name="instructions">Flip Cards to Match, if they dob\'t match flip back the card and try others, when they match continue with the others</string>
</resources>