<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.GuessTheNumberGameFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/gameSettingCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        app:backgroundTint="@android:color/transparent"
        app:cardBackgroundColor="@color/light_blue"
        app:cardCornerRadius="30dp"
        app:cardElevation="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/gameSettingTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_margin="16dp"
            android:fontFamily="@font/poppins_medium"
            android:padding="10dp"
            android:text="Oyun Bilgilendirme !"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/gameSettingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/poppins_medium"
            android:padding="10dp"
            android:text="@string/game_setting"
            android:textColor="@color/light_black_color"
            android:textSize="14sp" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/rightCounterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="48dp"
        android:fontFamily="@font/adamina"

        android:text="4"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gameSettingCardView" />

    <TextView
        android:id="@+id/rightTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="56dp"
       android:fontFamily="@font/adamina"
        android:text="HAK: "
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gameSettingCardView" />





    <EditText
        android:id="@+id/guessNumberText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="84dp"
        android:ems="10"
        android:hint="Tahmin Giriniz"
        android:inputType="number"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gameSettingCardView" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="84dp"
        android:text="EKLE"
        android:textColor="?android:textColorPrimary"
        android:backgroundTint="@color/laci"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/guessNumberText"
        app:layout_constraintTop_toBottomOf="@id/gameSettingCardView" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:layout_marginTop="64dp"
        android:background="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guessNumberText"
        tools:ignore="MissingConstraints">

        <TableRow android:background="@color/blue_tone">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/col1"
                android:textColor="@color/white"
                android:textSize="18sp"></TextView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/col2"
                android:textColor="@color/white"
                android:textSize="18sp"></TextView>

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/guess1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:textColor="?android:textColorPrimary"
                android:textSize="18sp"
                tools:text="@string/guess1"></TextView>

            <TextView
                android:id="@+id/hint1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:textColor="?android:textColorPrimary"
                android:textSize="18sp"
                tools:text="@string/hint1"></TextView>
        </TableRow>


    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>